Make diplay property of cropper modal fixed

--- a/styles/Workspace_Cropper.scss
+++ b/styles/Workspace_Cropper.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   inset: 0;
   width: 80%;
   height: 100vh;
